# olaf-memory-context-engine

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: _config.yml  index.md  known-limitations.md
docs/getting-started/: installation.md  quick-start.md  troubleshooting.md  upgrade.md
docs/guide/: content-policy.md  how-claude-uses-olaf.md  project-rules.md  session-memory.md  tool-preference-rules.md  undo.md  workspaces.md
docs/reference/: benchmarks.md  cli.md  known-limitations.md  mcp-tools.md
src/: activity.rs  config.rs  db.rs  lib.rs  main.rs  policy.rs  sensitive.rs  workspace.rs
src/cli/: embed.rs  index.rs  init.rs  mod.rs  monitor.rs  monitor_tui.rs  observe.rs  restore.rs  serve.rs  sessions.rs  setup.rs  status.rs  workspace.rs
src/graph/: mod.rs  query.rs  skeleton.rs  store.rs  trace.rs
src/index/: diff.rs  full.rs  incremental.rs  mod.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
src/memory/: antipattern.rs  capture.rs  compression.rs  consolidation.rs  embedder.rs  mod.rs  nudge.rs  rules.rs  staleness.rs  store.rs
src/parser/: go.rs  mod.rs  php.rs  python.rs  rust_lang.rs  symbols.rs  typescript.rs
src/restore/: mod.rs  store.rs
tests/: ast_dump_tests.rs  benchmark_external.rs  embed_tests.rs  graph_tests.rs  index_tests.rs  init_tests.rs  mcp_integration_tests.rs  memory_tests.rs  monitor_tests.rs  parser_tests.rs  policy_tests.rs  restore_tests.rs  sessions_tests.rs  status_tests.rs  workspace_tests.rs
tests/fixtures/: benchmark_external.toml
tests/fixtures/bench_corpus/: baseline.toml  cases.toml
tests/fixtures/bench_corpus/src/: auth.rs  config.rs  database.rs  handler.rs  scheduler.rs
tests/fixtures/go/: sample.go
tests/fixtures/index/secrets/: .env  deploy.pem
tests/fixtures/index/src/: lib.rs  main.rs
tests/fixtures/php/: sample.php
tests/fixtures/python/: sample.py
tests/fixtures/rust/: sample.rs
tests/fixtures/skeleton/: go_outline.golden.txt  js_outline.golden.txt  php_outline.golden.txt  py_outline.golden.txt  rust_outline.golden.txt  ts_outline_rich.golden.txt
tests/fixtures/skeleton/src/: go_outline.go  js_outline.js  php_outline.php  py_outline.py  rust_outline.rs  ts_outline.ts  ts_outline_rich.ts
tests/fixtures/typescript/: sample.js  sample.ts
