[package]
name = "olaf"
version = "0.6.0"
edition = "2024"
description = "Codebase context engine for Claude Code"
license = "MIT"
repository = "https://github.com/kaziko/olaf-memory-context-engine"
readme = "README.md"
exclude = ["docs/"]
keywords = ["context", "mcp", "claude", "codebase", "developer-tools"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-php = "0.24"
tree-sitter-go = "0.25"
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.4"
blake3 = "1.8"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
toml = "0.8"
glob = "0.3"
libc = "0.2"
ctrlc = "2"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
fastembed = { version = "4", optional = true, default-features = false, features = ["ort-load-dynamic", "hf-hub-native-tls"] }

[features]
default = []
embeddings = ["dep:fastembed"]

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1.4"
assert_cmd = "2"
